[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD/Portrait/hud-portrait-male.png" type="Texture" id=1]
[ext_resource path="res://HUD/Overlay/hud-overlay.png" type="Texture" id=2]
[ext_resource path="res://HUD/HealthBar/HPBarRect.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/ManaBar/hud-mana-bar.png" type="Texture" id=4]
[ext_resource path="res://HUD/ExperienceBar/XPBarRect.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD/CharacterUI.gd" type="Script" id=6]

[node name="CharacterUI" type="Control"]
margin_right = 120.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitRect" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverlayRect" type="TextureRect" parent="."]
margin_right = 112.0
margin_bottom = 48.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HPBarRect" parent="." instance=ExtResource( 3 )]

[node name="ManaBarRect" type="TextureProgress" parent="."]
margin_left = 46.0
margin_top = 22.0
margin_right = 106.0
margin_bottom = 26.0
value = 100.0
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XPBarRect" parent="." instance=ExtResource( 5 )]
